13 Monitorizacion/assets/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
    - host: my.kubernetes.example
      http:
        paths:
          - path: /webapp1
            backend:
              serviceName: webapp1-svc
              servicePort: 80
          - path: /webapp2
            backend:
              serviceName: webapp2-svc
              servicePort: 80
          - backend:
              serviceName: webapp3-svc
              servicePort: 80
